--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py27,py34}-django{17,18}
-
+    {py27,py34}-django{17,18,19}
+    {py35}-django{18,19}
 [testenv]
 commands=
     py.test easy_cache/tests.py
@@ -11,7 +11,8 @@ setenv =
 deps =
     django17: Django==1.7.*
     django18: Django==1.8.*
-    pytest==2.7.2
+    django19: Django==1.9.*
+    pytest==2.8.5
     django-redis==4.2.0
     memory-profiler==0.33
     mock==1.0.1
