A lot of changes and improvements:
1. Tests moved to separate folder and adapted for redis/memcached in docker
2. versioneer added
3. Some fixes and compatibility changes
4. Removed support for python 3.4 and Django 1.7
5. Added support for python 3.6 and Django 1.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,20 @@
 [tox]
 envlist =
-    {py27,py34}-django{17,18,19}
-    {py35}-django{18,19}
+    {py27,py35,py36}-django{18,19,110}
+
+tox_pyenv_fallback=False
 [testenv]
 commands=
-    py.test easy_cache/tests.py
-    python easy_cache/benchmarks.py
+    py.test tests/tests_basic.py
+    python tests/benchmarks.py
 setenv =
     EASY_CACHE_LAZY_MODE_ENABLE = yes
+    PYTHONPATH = {toxinidir}
 deps =
-    django17: Django==1.7.*
     django18: Django==1.8.*
     django19: Django==1.9.*
-    pytest==2.8.5
+    django110: Django==1.10.*
+    pytest==3.0.4
     django-redis==4.2.0
     memory-profiler==0.33
     mock==1.0.1
