--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,16 @@ envlist =
     {py27,py35,py36}-django{18,19,110}
 
 tox_pyenv_fallback=False
+
+[pytest]
+testpaths = tests
+python_files = tests_*
+addopts = -s
+
 [testenv]
 commands=
     py.test tests/tests_basic.py
+    py.test tests/tests_cache_clients.py
     python tests/benchmarks.py
 setenv =
     EASY_CACHE_LAZY_MODE_ENABLE = yes
@@ -20,5 +27,5 @@ deps =
     mock==1.0.1
     psutil==3.1.1
     python-memcached==1.57
-    redis==2.10.3
+    redis==2.10.5
     pylibmc==1.5.0
