--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,15 @@ services:
   - memcached
   - redis-server
 install:
+  - pip install Django=$DJANGO_VERSION
   - pip install -e .[tests]
 env:
+  - DJANGO_VERSION=1.8
+  - DJANGO_VERSION=1.9
+  - DJANGO_VERSION=1.10
+
   global:
     - EASY_CACHE_REDIS_HOST=127.0.0.1:6379
     - EASY_CACHE_MEMCACHED_HOST=127.0.0.1:11211
+
 script: pytest -vv
