--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ install:
   - pip install Django=$DJANGO_VERSION
   - pip install -e .[tests]
 env:
-  - DJANGO_VERSION=1.8
-  - DJANGO_VERSION=1.9
-  - DJANGO_VERSION=1.10
+  matrix:
+    - DJANGO_VERSION=1.8
+    - DJANGO_VERSION=1.9
+    - DJANGO_VERSION=1.10
 
   global:
     - EASY_CACHE_REDIS_HOST=127.0.0.1:6379
