add passenv=EASY_CACHE_REDIS_HOST,EASY_CACHE_MEMCACHED_HOST to tox. add python2 tests compability

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ python_files = tests_*
 addopts = -s
 
 [testenv]
+passenv=EASY_CACHE_REDIS_HOST,EASY_CACHE_MEMCACHED_HOST
 commands=
     py.test tests/tests_basic.py
     py.test tests/tests_cache_clients.py
