--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     - DJANGO_VERSION=1.8
     - DJANGO_VERSION=1.9
     - DJANGO_VERSION=1.10
-
+    - DJANGO_VERSION=1.11
   global:
     - EASY_CACHE_REDIS_HOST=127.0.0.1:6379
     - EASY_CACHE_MEMCACHED_HOST=127.0.0.1:11211
