--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py35,py36}-django{18,19,110}
+    {py27,py35,py36}-django{18,19,110,111}
 
 tox_pyenv_fallback=False
 
@@ -22,6 +22,7 @@ deps =
     django18: Django==1.8.*
     django19: Django==1.9.*
     django110: Django==1.10.*
+    django111: Django==1.11.*
     pytest==3.0.4
     django-redis==4.2.0
     memory-profiler==0.33
