Documentation updated, docker-compose added, added Django 2.0 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py27,py35,py36}-django{18,19,110,111}
-
+    {py27,py35,py36}-django{18,111}
+    {py36}-django20
 tox_pyenv_fallback=False
 
 [pytest]
@@ -20,14 +20,13 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     django18: Django==1.8.*
-    django19: Django==1.9.*
-    django110: Django==1.10.*
     django111: Django==1.11.*
-    pytest==3.0.4
-    django-redis==4.2.0
-    memory-profiler==0.33
-    mock==1.0.1
-    psutil==3.1.1
-    python-memcached==1.57
-    redis==2.10.5
-    pylibmc==1.5.0
+    django20: Django>=2.0.0
+    pytest
+    django-redis
+    memory-profiler
+    mock
+    psutil
+    python-memcached
+    redis
+    pylibmc
