add support for python3.10 add support for django 4.1 add new pymemcache backend added in django 3.2 remove python2.7,3.5,3.6 remove six change deprecated inspect.getcallargs (incorrect not working in 3.10 can not process staticmethods) skip tests for old memcache backend for django >=3 skip tests for new memcache backend for django <3

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    {py27,py35,py36}-django{18,111}
-    {py36}-django20
+    {py37}-django20
+    {py38,py39,py310}-django34
 tox_pyenv_fallback=False
 
 [pytest]
@@ -19,14 +19,14 @@ setenv =
     EASY_CACHE_LAZY_MODE_ENABLE = yes
     PYTHONPATH = {toxinidir}
 deps =
-    django18: Django==1.8.*
-    django111: Django==1.11.*
     django20: Django>=2.0.0
+    django20: python-memcached
+    django34: Django>=3
+    django34: pymemcache
     pytest
     django-redis
     memory-profiler
     mock
     psutil
-    python-memcached
     redis
     pylibmc
