Few minor fixes and readme updates

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
     {py37}-django20
-    {py38,py39,py310}-django34
+    {py38,py39,py310}-{django34}
+    {py310}-{django4}
 tox_pyenv_fallback=False
 
 [pytest]
@@ -23,6 +24,8 @@ deps =
     django20: python-memcached
     django34: Django>=3
     django34: pymemcache
+    django4: Django>=4
+    django4: pymemcache
     pytest
     django-redis
     memory-profiler
